--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     pgsql:
         image: 'postgis/postgis'
         ports:
-            - '${FORWARD_DB_PORT:-5432}:5432'
+            - '${DB_PORT:-5432}:5432'
         environment:
             PGPASSWORD: '${DB_PASSWORD:-secret}'
             POSTGRES_DB: '${DB_DATABASE}'
