fixe : ci/cd instance name

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  INSTANCE: 'beekeeper-api.tree'
+  INSTANCE: 'Writerside/beekeeper-api'
   DOCKER_VERSION: '243.22562'
 
 jobs:
