--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: ["main", "develop", "feat/*"]
   workflow_dispatch:
-
+permissions:
+  id-token: write
+  contents: read
 env:
   INSTANCE: 'Writerside/beekeeper-api'
   DOCKER_VERSION: '243.22562'
