Add frontend URL to .env

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+FRONTEND_URL=http://localhost:4200/
+
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
